[package]
name = "moan"
version = "0.2.0"
authors = ["Yuri Katsuki <yuri@katsuki.moe>"]
license = "MIT"
description = "Moan encode and decode API"
homepage = "https://github.com/katsuki-yuri/moan"
repository = "https://github.com/katsuki-yuri/moan"
readme = "readme.md"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
