[package]
name = "moan"
version = "0.2.1"
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]
license = "MIT"
description = "Moan encode and decode API"
homepage = "https://github.com/orzklv/moan"
repository = "https://github.com/orzklv/moan"
readme = "readme.md"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
